--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
 </head>
 <body>
     <h1>Calculator</h1>
+    <div id="calculator">
+        <div id="display"></div>
+        <div id="button-container">
+            <button id="1">1</button>
+            <button id="2">2</button>
+            <button id="3">3</button>
+            <button id="4">4</button>
+            <button id="5">5</button>
+            <button id="6">6</button>
+            <button id="7">7</button>
+            <button id="8">8</button>
+            <button id="9">9</button>
+            <button id="0">0</button>
+            <button id="add">+</button>
+            <button id="sub">-</button>
+            <button id="mul">*</button>
+            <button id="div">/</button>
+            <button id="equal">=</button>
+        </div>
+    </div>
     <script src="js/script.js"></script>
 </body>
 </html>
