Add Clear button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div id="calculator">
         <div id="display"></div>
         <div id="button-container">
+            <button id="clear">C</button>
             <button id="1">1</button>
             <button id="2">2</button>
             <button id="3">3</button>
