Refactor to add Google Font and change class name

--- a/index.html
+++ b/index.html
@@ -6,29 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Calculator</h1>
     <div id="calculator">
-        <div id="display"></div>
-        <div id="button-container">
-            <button id="clear">C</button>
-            <button id="1">1</button>
-            <button id="2">2</button>
-            <button id="3">3</button>
-            <button id="4">4</button>
-            <button id="5">5</button>
-            <button id="6">6</button>
-            <button id="7">7</button>
-            <button id="8">8</button>
-            <button id="9">9</button>
-            <button id="0">0</button>
-            <button id="add">+</button>
-            <button id="sub">-</button>
-            <button id="mul">*</button>
-            <button id="div">/</button>
-            <button id="equal">=</button>
-        </div>
+        <div id="display">28 + 9</div>
+        <button class="button" id="clear">Clear</button>
+        <button class="button" id="delete">Delete</button>
+        <button class="button" id="add">+</button>
+        <button class="button" id="sub">-</button>
+        <button class="button" id="mul">*</button>
+        <button class="button" id="div">/</button>
+        <button class="button" id="equal">=</button>
+        <button class="button-number" id="1">1</button>
+        <button class="button-number" id="2">2</button>
+        <button class="button-number" id="3">3</button>
+        <button class="button-number" id="4">4</button>
+        <button class="button-number" id="5">5</button>
+        <button class="button-number" id="6">6</button>
+        <button class="button-number" id="7">7</button>
+        <button class="button-number" id="8">8</button>
+        <button class="button-number" id="9">9</button>
+        <button class="button-number" id="0">0</button>
     </div>
     <script src="js/script.js"></script>
 </body>
