Change "button-number" class to "button"

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id="calculator">
-        <div id="display">28 + 9</div>
+        <div id="display"></div>
         <button class="button" id="clear">Clear</button>
         <button class="button" id="delete">Delete</button>
         <button class="button" id="add">+</button>
@@ -19,16 +19,16 @@
         <button class="button" id="mul">*</button>
         <button class="button" id="div">/</button>
         <button class="button" id="equal">=</button>
-        <button class="button-number" id="1">1</button>
-        <button class="button-number" id="2">2</button>
-        <button class="button-number" id="3">3</button>
-        <button class="button-number" id="4">4</button>
-        <button class="button-number" id="5">5</button>
-        <button class="button-number" id="6">6</button>
-        <button class="button-number" id="7">7</button>
-        <button class="button-number" id="8">8</button>
-        <button class="button-number" id="9">9</button>
-        <button class="button-number" id="0">0</button>
+        <button class="button" id="1">1</button>
+        <button class="button" id="2">2</button>
+        <button class="button" id="3">3</button>
+        <button class="button" id="4">4</button>
+        <button class="button" id="5">5</button>
+        <button class="button" id="6">6</button>
+        <button class="button" id="7">7</button>
+        <button class="button" id="8">8</button>
+        <button class="button" id="9">9</button>
+        <button class="button" id="0">0</button>
     </div>
     <script src="js/script.js"></script>
 </body>
