Add decimal point button

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <button class="button" id="8">8</button>
         <button class="button" id="9">9</button>
         <button class="button" id="0">0</button>
+        <button class="button" id="decimal">.</button>
     </div>
     <script src="js/script.js"></script>
 </body>
