--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <button class="button" id="0">0</button>
         <button class="button" id="decimal">.</button>
     </div>
+    <p id="credit">Made by Hung Duong Quang @qhungg289.</p>
     <script src="js/script.js"></script>
 </body>
 </html>
