--- a/index.html
+++ b/index.html
@@ -1,37 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
-</head>
-<body>
-    <div id="calculator">
-        <div id="display"></div>
-        <button class="button" id="clear">Clear</button>
-        <button class="button" id="delete">Delete</button>
-        <button class="button" id="add">+</button>
-        <button class="button" id="sub">-</button>
-        <button class="button" id="mul">*</button>
-        <button class="button" id="div">/</button>
-        <button class="button" id="equal">=</button>
-        <button class="button" id="1">1</button>
-        <button class="button" id="2">2</button>
-        <button class="button" id="3">3</button>
-        <button class="button" id="4">4</button>
-        <button class="button" id="5">5</button>
-        <button class="button" id="6">6</button>
-        <button class="button" id="7">7</button>
-        <button class="button" id="8">8</button>
-        <button class="button" id="9">9</button>
-        <button class="button" id="0">0</button>
-        <button class="button" id="decimal">.</button>
-    </div>
-    <p id="credit">Made by Hung Duong Quang @qhungg289.</p>
-    <script src="js/script.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Calculator</title>
+		<link rel="stylesheet" href="css/style.css" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap"
+			rel="stylesheet"
+		/>
+	</head>
+	<body>
+		<div id="calculator">
+			<div id="display"></div>
+			<button class="button" id="clear">Clear</button>
+			<button class="button" id="delete">Delete</button>
+			<button class="button" id="add">+</button>
+			<button class="button" id="sub">-</button>
+			<button class="button" id="mul">*</button>
+			<button class="button" id="div">/</button>
+			<button class="button" id="equal">=</button>
+			<button class="button" id="1">1</button>
+			<button class="button" id="2">2</button>
+			<button class="button" id="3">3</button>
+			<button class="button" id="4">4</button>
+			<button class="button" id="5">5</button>
+			<button class="button" id="6">6</button>
+			<button class="button" id="7">7</button>
+			<button class="button" id="8">8</button>
+			<button class="button" id="9">9</button>
+			<button class="button" id="0">0</button>
+			<button class="button" id="decimal">.</button>
+		</div>
+		<p id="credit">Made by Hung Duong Quang @qhungg289.</p>
+		<script src="js/script.js"></script>
+	</body>
 </html>
