Add a secondary display

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 	</head>
 	<body>
 		<div id="calculator">
-			<div id="display"></div>
+			<div id="display">
+				<p id="second-display">0</p>
+				<p id="main-display"></p>
+			</div>
 			<button class="button" id="clear">Clear</button>
 			<button class="button" id="delete">Delete</button>
 			<button class="button" id="add">+</button>
