Add social links

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap"
 			rel="stylesheet"
 		/>
+		<script src="https://kit.fontawesome.com/313ff853e5.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<div id="calculator">
@@ -38,6 +39,10 @@
 			<button class="button" id="decimal">.</button>
 		</div>
 		<p id="credit">Made by Hung Duong Quang @qhungg289.</p>
+		<span id="social-links">
+			<a href="https://www.facebook.com/qhungg289/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+			<a href="https://github.com/qhungg289" target="_blank"><i class="fab fa-github-square"></i></a>
+		</span>
 		<script src="js/script.js"></script>
 	</body>
 </html>
