--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap"
 			rel="stylesheet"
 		/>
-		<script src="https://kit.fontawesome.com/313ff853e5.js" crossorigin="anonymous"></script>
+		<script
+			src="https://kit.fontawesome.com/313ff853e5.js"
+			crossorigin="anonymous"
+		></script>
 	</head>
 	<body>
 		<div id="calculator">
@@ -40,8 +43,12 @@
 		</div>
 		<p id="credit">Made by Hung Duong Quang @qhungg289.</p>
 		<span id="social-links">
-			<a href="https://www.facebook.com/qhungg289/" target="_blank"><i class="fab fa-facebook-square"></i></a>
-			<a href="https://github.com/qhungg289" target="_blank"><i class="fab fa-github-square"></i></a>
+			<a href="https://www.facebook.com/qhungg289/" target="_blank"
+				><i class="fab fa-facebook-square"></i
+			></a>
+			<a href="https://github.com/qhungg289" target="_blank"
+				><i class="fab fa-github-square"></i
+			></a>
 		</span>
 		<script src="js/script.js"></script>
 	</body>
